[63752] Couldn't launch with J9 because J9 didn't understand paths like "/D:/abx" while standard VM could. Changed so that we use system specific paths, such as "D:\abc" without the leading '/'